Updated gruntfile with new task to upload images to CDN Fixed spacing and added proper logo

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -237,21 +237,25 @@
         background-color: #ddd;
     }
     .sk-logo {
-      margin-top: 15px;
-      padding-bottom: 10px;
-      padding-top: 5px;
-      background: white;
-      text-align: center;
-      color: #e6e6e6;
-      font-size: 12px;
+        margin-top: 15px;
+        padding-bottom: 10px;
+        padding-top: 5px;
+        margin-left: 30px;
+        color: #e6e6e6;
+        font-size: 12px;
 
-      &.anchor-bottom {
-        position: absolute;
-        width: 285px;
-        bottom: 45px;
-        left: 0;
+        .sk-image {
+            position: relative;
+            left: 2px;
+            top: 3px;
+        }
+
+        &.anchor-bottom {
+            position: absolute;
+            width: 285px;
+            bottom: 45px;
+        }
     }
-  }
 }
 .sk-appear {
     -webkit-transform: translateY(90%);
